# tello-drone

./: pyproject.toml
src/tello_drone/: tello.py
